# data89_evaluation

./: .env.template  .gitignore  README.md  bn_linear_template.py  cdm_template.py  check_in_descriptive.py  data89_quiz1.html  data89_quiz1.qmd  data89_quiz_assessment.qmd  dynamic_bn_template.py  ecpe_200_data.csv  ecpe_qmatrix.csv  email.ipynb  email.py  email_draft_creation.py  evaluation_pipeline.py  fake_names_emails.csv  irt_diagnose_combo.py  irt_template.py  lcdm_analysis.py  linear_bayesnet_template.py  pyproject.toml  q_matrix_create.py  quiz1_extra.py  quiz1_irt_working.qmd  quiz1_retake.py  quiz1_working.qmd  quiz2.py  requirements.txt
diagnostics/: 1pl_irt_quiz1.csv  lcdm_quiz1.csv
docs/: index.html
other/: bn_linear  data89_quiz1.html  data89_quiz_assessment.qmd  email.ipynb  email_to_jp.csv  evaluation_pipeline.py  example_usage.py  irt_diagnose_combo.py  irt_diagnose_report.ipynb  irt_template.py  item_responses_200x11.csv  lcdm_analysis.py  other  other.stan  q_matrix_11_items_5_attributes.csv  quiz1_working.qmd  working.py
quiz_models/: quiz1_model  quiz1_model.stan  quiz1_model_attr3  quiz1_model_attr3.stan  quiz1_model_attr3_prior_only  quiz1_model_attr3_prior_only.stan  quiz1_model_prior_only  quiz1_model_prior_only.stan  quiz1_retake_model_attr3  quiz1_retake_model_attr3.stan  quiz1_retake_model_attr3_prior_only.stan
scripts/: bn_linear_template.py  bn_template.py  irt_2pl  irt_2pl_ML_model.py  irt_3pl  irt_analysis.py  lcdm.stan  lcdm_template.py  other_template.py  q_matrix_create.py
stan_models/: bayes_net_dina_linear  bn_lcdm_mimic  lcdm  (+41 more)
(+22 files in other folders)
