[project]
name = "data89-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arviz>=0.22.0",
    "certifi>=2025.11.12",
    "cmdstanpy>=1.3.0",
    "girth>=0.8.0",
    "great-tables>=0.20.0",
    "httpstan>=4.13.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.2",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "notebook>=7.5.2",
    "numpy>=2.3.5",
    "ordinalcorr>=0.7.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "plotnine>=0.15.2",
    "polars>=1.37.1",
    "py-irt>=0.6.6",
    "pyhere>=1.0.3",
    "pyjanitor>=0.32.3",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "semopy>=2.3.11",
    "statsmodels>=0.14.6",
    "streamlit>=1.52.2",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
